# AutoEmailWithLLM

./: .env.example  .gitignore  README.md  app.py  init_database.py  migrate_database.py  migrate_llm_configs.py  migrate_user_files.py  migrate_user_profiles.py  pyproject.toml  rebuild_user_profiles.py  settings.json
backend/: config.py  database.py  document_service.py  email_service.py  import_service.py  llm_service.py  user_service.py
backend/models/: user_profile.py
frontend/static/css/: style.css
frontend/static/js/: core.js  email-generator.js  email-sender.js  professor-manager.js  records-manager.js  settings.js  template-manager.js  user_management.js
frontend/templates/: base.html  email_generator.html  index.html  professors.html  records.html  settings.html  user_management.html
